# clickcheck

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  FIX_GIT_CONFIG.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  MANUAL_GIT_COMMANDS.txt  MANUAL_UPLOAD_LIST.txt  PYPI_SETUP.md  QUICKSTART.md  README.md  client.py  exceptions.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish.yml  test.yml
clickcheck/: _init_.py
tests/: __init__.py  test_basic.py
workflows/: tests.yml
